src/App.css
.App {
  text-align: center;
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: white;
  overscroll-behavior: none;
}

.Content {
  width: 80%;
}

.InputFieldWrapper {
  width: 100%;
  display: flex;
  justify-content: center;
}

.InputField {
  width: 100%;
  max-width: 1000px;
}

.App-footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: calc(2vmin);
  margin: 1.5rem;
}

.PokemonName {
  font-size: calc(20px + 2vmin);
  font-weight: bold;
  margin-top: 2rem;
}

.PokemonType {
  font-size: calc(15px + 2vmin);
  font-weight: bold;
  margin-bottom: 2rem;
}

.DefenseMultiplier {
  margin-bottom: 1rem;
}

.DefenseMultiplier-multi {
  font-weight: bold;
}

.DefenseMultiplier-4 {
  color: red;
}

.DefenseMultiplier-2 {
  color: orangered;
}

.DefenseMultiplier-05 {
  color: green;
}

.DefenseMultiplier-025 {
  color: greenyellow;
}

.DefenseMultiplier-0 {
  color: gold;
}

.DefenseMultiplier-types {
  font-style: italic;
}

.App-footer {
  font-size: small;
}

